# open_recruiter

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.ps1  build.sh  env.example  install.sh  macos-install.command  package-lock.json  package.json  pyproject.toml  setup.ps1  setup.sh  start.ps1  start.sh
.claude/skills/add-chat-action/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.github/workflows/: release.yml
backend/: .env.example  open_recruiter.spec  pyproject.toml  run_server.py
backend/app/: auth.py  automation_tasks.py  cli.py  config.py  database.py  llm.py  main.py  models.py  prompts.py  scheduler.py  vectorstore.py
backend/app/agents/: communication.py  employer.py  evaluation_swarm.py  jd.py  job_search.py  market.py  matching.py  orchestrator.py  planning.py  resume.py  scheduling.py  workflow.py
backend/app/graphs/: __init__.py  chat_graph.py  checkpointer.py  feature_flags.py  router.py  sse_adapter.py  state.py  supervisor.py
backend/app/graphs/agents/: __init__.py  communication_agent.py  jd_agent.py  job_match_agent.py  job_search_agent.py  matching_agent.py  pipeline_agent.py  resume_agent.py  scheduling_agent.py
backend/app/guardrails/: __init__.py  action_limits.py  base.py  input_validator.py  output_validator.py  policy.py
backend/app/memory/: __init__.py  entity.py  loader.py  sensory.py  working.py
backend/app/routes/: agent.py  auth.py  automations.py  backup.py  calendar.py  candidates.py  emails.py  jobs.py  ollama.py  profile.py  search.py  seeker.py  settings.py  transcribe.py
backend/app/slack/: bot.py  handlers.py  normalizer.py  notifier.py  pipeline.py  privacy.py  routes.py
backend/app/tools/: email_sender.py  imap_checker.py  resume_parser.py
backend/hooks/: rthook_tiktoken.py
backend/uploads/: 20260209_175538_test_resume.txt
document/: USER_MANUAL.md  product-features.md  release.md  slack-integration-guide.md  v2-langgraph-architecture.md  v2-roadmap.md  v3-roadmap.md
electron/: afterPack.js  electron-builder.json  main.ts  preload.ts  tsconfig.json
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/: BulkOutreachCard.tsx  ContextPanel.tsx  DraggableCandidateCard.tsx  EmojiPickerButton.tsx  GuardrailWarning.tsx  Header.tsx  JobSeekerSidebar.tsx  MessageBlocks.tsx  MicButton.tsx  PipelineBar.tsx  PipelineCleanupCard.tsx  PlanPreview.tsx  SchedulingApprovalCard.tsx  SemanticSearchBar.tsx  Sidebar.tsx  SmartActionBar.tsx  WorkflowTracker.tsx
frontend/src/hooks/: useApi.ts
frontend/src/i18n/: en.ts  es.ts  index.ts  ja.ts  ko.ts  zh-TW.ts  zh.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Automations.tsx  Calendar.tsx  CandidateDetail.tsx  Candidates.tsx  Chat.tsx  Dashboard.tsx  JobSeekerHome.tsx  JobSeekerJobs.tsx  JobSeekerProfile.tsx  Jobs.tsx  Login.tsx  Onboarding.tsx  Outreach.tsx  (+1 more)
graphs/: chat_graph.py  checkpointer.py  state.py  supervisor.py
graphs/agents/: jd_agent.py
scripts/: build.ps1  setup.ps1  setup.sh  start.sh
skills/: backend.md  deployment.md  langgraph.md  memory.md  testing.md
src/open_recruiter/: __init__.py  cli.py  config.py  database.py  llm.py  orchestrator.py  prompts.py  schemas.py
tests/: conftest.py  test_core.py
tests/harness/: test_guardrails.py  test_intent_detection.py  test_memory.py  test_transcribe.py
(+11 files in other folders)
