[project]
name = "open-recruiter-backend"
version = "0.1.0"
description = "Open Recruiter — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "openai>=1.60",
    "anthropic>=0.40",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
