[project]
name = "open-recruiter-backend"
version = "0.1.0"
description = "Open Recruiter — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "litellm>=1.60",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    "onnxruntime>=1.17",
    "tokenizers>=0.19",
    "slack-bolt>=1.18",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "APScheduler>=3.10,<4",
    "ddgs>=9.0",
    "pyinstaller>=6.0",
]

[project.scripts]
open-recruiter = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
